--- a/src/main/webapp/pharmacy/admin/upload_amps.xhtml
+++ b/src/main/webapp/pharmacy/admin/upload_amps.xhtml
@@ -50,8 +50,8 @@
                                     </tr>
                                     <tr>
                                         <td>4</td>
-                                        <td>ATM</td>
-                                        <td>ATM name. (Generic Name) Required.</td>
+                                        <td>Barcode</td>
+                                        <td>Barcode Optional</td>
                                     </tr>
                                     <tr>
                                         <td>3</td>
