--- a/src/main/webapp/emr/reports/amps.xhtml
+++ b/src/main/webapp/emr/reports/amps.xhtml
@@ -46,13 +46,9 @@
                                     <h:outputText value="#{item.name}" />
                                 </p:column>
 
-
-
-
-
                                 <p:column headerText="Code" filterBy="#{item.code}" filterMatchMode="contains" sortBy="#{item.code}">
                                     <h:outputText value="#{item.code}" />
-                                </p:column>
+*                                </p:column>
 
                                 <p:column headerText="BarCode" filterBy="#{item.barcode}" filterMatchMode="contains" sortBy="#{item.barcode}">
                                     <h:outputText value="#{item.barcode}" />
