--- a/src/main/webapp/admin/pricing/package_name.xhtml
+++ b/src/main/webapp/admin/pricing/package_name.xhtml
@@ -10,75 +10,94 @@
 
     <ui:define name="subcontent">
 
-        <h:panelGroup >
-            <h:form  >
-                <p:growl />
-                <p:focus id="selectFocus" context="gpSelect" />
-                <p:focus id="detailFocus" context="gpDetail" />
+
+        <h:form class="w-100"  >
+            <p:growl />
+            <p:focus id="selectFocus" for="lstSelect" />
+            <p:focus id="detailFocus" for="txtName" />
 
 
 
-                <p:panel header="Department" styleClass="verticalAndHorizontalCentering">
-                    <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
+            <p:panel class="w-100" >
+                <f:facet name="header" >
+                    <h:outputText value="Manage Package Names" ></h:outputText>
+                </f:facet>
 
-                        
-                        <h:panelGrid id="gpSelect" columns="1"  >
-                            <p:panel >
-                                <h:panelGrid id="gpSelectText" >
-                                    <p:selectOneListbox  id="lstSelect"   class="w-100" scrollHeight="500" value="#{packageNameController.current}" style="min-width:400px">
-                                        <f:selectItems  value="#{packageNameController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
-                                        <f:ajax render="gpDetail" execute="lstSelect" >
-                                        </f:ajax>
-                                    </p:selectOneListbox>
-                                </h:panelGrid>
-                                <h:panelGrid id="gpSelectButtons" columns="3"  >
+                <h:panelGroup class="row" >
+                    <h:panelGroup class="col-6" >
+                        <p:selectOneListbox  
+                            id="lstSelect"   
+                            class="w-100" 
+                            scrollHeight="500" 
+                            filter="true"
+                            value="#{packageNameController.current}" 
+                            >
+                            <f:selectItems  value="#{packageNameController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
+                            <p:ajax process="lstSelect" update="gpDetails" ></p:ajax>
+                        </p:selectOneListbox>
+                        <p:commandButton 
+                            id="btnAdd" 
+                            process="btnAdd"
+                            update="gpDetails lstSelect detailFocus"
+                            value="Add" 
+                            class="ui-button-success m-1"
+                            action="#{packageNameController.prepareAdd()}" >
+                        </p:commandButton>
 
-                                    <h:commandButton id="btnAdd" value="Add" action="#{packageNameController.prepareAdd()}" styleClass="buttons" >
-                                        <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail detailFocus" execute="" >
-                                        </f:ajax>
-                                    </h:commandButton>
+                        <p:commandButton 
+                            id="btnDelete" 
+                            class="ui-button-danger m-1"
+                            onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                        return false;" 
+                            action="#{packageNameController.delete()}"  
+                            value="Delete"  >
+                        </p:commandButton>
+                    </h:panelGroup>
 
-                                    <h:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                return false;" action="#{packageNameController.delete()}"  value="Delete"  >
-                                    </h:commandButton>
+                    <h:panelGroup class="col-6 float-left" >
 
-                                </h:panelGrid>
-                            </p:panel>
-                        </h:panelGrid  >
+                        <p:panelGrid id="gpDetails" columns="2" class="w-100 no-border" >
 
-                        <p:panel style="min-height: 550px">
-                            <h:panelGrid id="gpDetail" columns="1">
-                                <p:panel header="PackageItem Detail" style="width: 600px; height: 270px">
-                                    <h:outputLabel value="Active" rendered="#{!packageNameController.current.inactive}" style="color: green;"></h:outputLabel>
-                                    <h:outputLabel value="Inactive" rendered="#{packageNameController.current.inactive}" style="color: red;"></h:outputLabel>
+                            <h:outputText id="lblName" value="Name" ></h:outputText>
+                            <p:inputText 
+                                autocomplete="off" 
+                                id="txtName" 
+                                value="#{packageNameController.current.name}" 
+                                class="w-100"></p:inputText>
+                            <h:outputText value="Active Status" ></h:outputText>
+                            <p:selectBooleanButton
+                                value="#{packageNameController.current.inactive}" 
+                                offLabel="Inactive"
+                                onLabel="Active"
+                                >
+                            </p:selectBooleanButton>
+                        </p:panelGrid>
+                        <p:defaultCommand target="btnSave"/>
+                        <p:commandButton id="btnSave" 
+                                         value="Save" 
+                                         process="gpDetails btnSave"
+                                         update="lstSelect selectFocus"
+                                         action="#{packageNameController.saveSelected()}" 
+                                         class="ui-button-info m-1"
+                                         >
+                        </p:commandButton>
 
-                                    <h:panelGrid id="gpDetailText" columns="2" style="height: 150px">
 
-                                        <h:outputText id="lblName" value="Name" ></h:outputText>
-                                        <h:inputText autocomplete="off" id="txtName" value="#{packageNameController.current.name}" style="min-width: 400px" ></h:inputText>
-                                        <h:outputText value="" ></h:outputText>
-                                        <p:selectBooleanCheckbox value="#{packageNameController.current.inactive}" itemLabel="Service Inactive"/>
-                                    </h:panelGrid>
-                                </p:panel>
-
-
-                                <h:panelGrid id="gpDetailButtons" columns="2">
+                    </h:panelGroup>
 
 
 
-                                    <h:commandButton id="btnSave" value="Save" action="#{packageNameController.saveSelected()}" styleClass="buttons">
-                                        <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail selectFocus"  execute="gpDetail" >
-                                        </f:ajax>
-                                    </h:commandButton>
-                                    <p:defaultCommand target="btnSave"/>
-                                </h:panelGrid>
-                            </h:panelGrid>
-                        </p:panel>
-                    </h:panelGrid>
-                </p:panel>
-            </h:form>
+                </h:panelGroup>
 
-        </h:panelGroup>
+
+
+
+
+            </p:panel>
+
+        </h:form>
+
+
 
     </ui:define>
 
