--- a/src/main/webapp/admin/pricing/membership/membership_scheme.xhtml
+++ b/src/main/webapp/admin/pricing/membership/membership_scheme.xhtml
@@ -13,22 +13,28 @@
         <h:panelGroup >
             <h:form  >
                 <p:growl />
-                <p:focus id="selectFocus" context="gpSelect" />
-                <p:focus id="detailFocus" context="gpDetail" />
+                <p:focus id="selectFocus" for="lstSelect" />
+                <p:focus id="detailFocus" for="txtName" />
 
 
 
                 <p:panel header="Manage Memership Schemes" styleClass="verticalAndHorizontalCentering" >
-                    
+
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop" >
 
                         <h:panelGrid id="gpSelect" columns="1"  >
                             <p:panel >
                                 <h:panelGrid id="gpSelectText" >
-                                    <p:selectOneListbox  id="lstSelect"  class="w-100" scrollHeight="500" value="#{membershipSchemeController.current}" style="min-width: 400px">
+                                    <p:selectOneListbox  
+                                        id="lstSelect"  
+                                        class="w-100" 
+                                        scrollHeight="500" 
+                                        value="#{membershipSchemeController.current}" 
+                                        filter="true">
                                         <f:selectItems  value="#{membershipSchemeController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
-                                        <f:ajax render="gpDetail" execute="lstSelect" >
-                                        </f:ajax>
+                                        <!--                                        <f:ajax render="gpDetail" execute="lstSelect" >
+                                                                                </f:ajax>-->
+                                        <p:ajax process="lstSelect" update="gpDetail"/>
                                     </p:selectOneListbox>
                                 </h:panelGrid>
                                 <h:panelGrid id="gpSelectButtons" columns="3"  >
@@ -36,13 +42,20 @@
                                         <f:ajax event="click" render="btnAdd  btnDelete btnSave lstSelect :#{p:resolveFirstComponentWithId('gpDetail',view).clientId} detailFocus" execute="@this" >
                                         </f:ajax>
                                     </p:commandButton>
-                                    <p:commandButton id="btnAdd" value="Add" action="#{membershipSchemeController.prepareAdd()}" styleClass="buttons" >
-                                        <f:ajax event="click" render="btnAdd  btnDelete btnSave lstSelect :#{p:resolveFirstComponentWithId('gpDetail',view).clientId} detailFocus" execute="@this" >
-                                        </f:ajax>
+                                    <p:commandButton
+                                        id="btnAdd" 
+                                        value="Add"
+                                        action="#{membershipSchemeController.prepareAdd()}"
+                                        process="btnAdd"
+                                        update="lstSelect gpDetail detailFocus">
+                                        <!--                                        <f:ajax
+                                                                                    event="click" 
+                                                                                    render="btnAdd  btnDelete btnSave lstSelect :#{p:resolveFirstComponentWithId('gpDetail',view).clientId} detailFocus" execute="@this" >
+                                                                                </f:ajax>-->
                                     </p:commandButton>
-                                    
+
                                     <p:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                        return false;" action="#{membershipSchemeController.delete()}"  value="Delete" ajax="false"  >
+                                                return false;" action="#{membershipSchemeController.delete()}"  value="Delete" ajax="false"  >
                                     </p:commandButton>
                                 </h:panelGrid>
                             </p:panel>
@@ -58,11 +71,19 @@
                                     <h:outputText id="lblCode" value="Code" ></h:outputText>
                                     <h:inputText autocomplete="off" id="txtCode" value="#{membershipSchemeController.current.code}" style="min-width: 450px" ></h:inputText>
                                 </h:panelGrid>
-                                <h:panelGrid id="gpDetailButtons" columns="2">
-                                    <p:commandButton id="btnSave" value="Save" action="#{membershipSchemeController.saveSelected()}" styleClass="buttons" ajax="false">
-                                    </p:commandButton>
-                                    <p:defaultCommand target="btnSave"/>
-                                </h:panelGrid>
+
+                            </h:panelGrid>
+                            <h:panelGrid id="gpDetailButtons" columns="2">
+                                <p:commandButton 
+                                    id="btnSave" 
+                                    value="Save"
+                                    action="#{membershipSchemeController.saveSelected()}" 
+                                    process="btnSave gpDetail " 
+                                    update="lstSelect selectFocus msg"
+                                    >
+                                </p:commandButton>
+                                <p:messages id="msg"  />
+                                <p:defaultCommand target="btnSave"/>
                             </h:panelGrid>
                         </p:panel>
                     </h:panelGrid>
