--- a/src/main/webapp/inward/admission_profile.xhtml
+++ b/src/main/webapp/inward/admission_profile.xhtml
@@ -29,26 +29,32 @@
                     </div>
                 </div>
                 <div class="col-2" >
-                    <!-- Action Buttons Section -->
-                    <div class="card mb-3">
-                        <div class="card-header">
-                            <i class="fa fa-tasks"></i> Actions
-                        </div>
-                        <div class="card-body">
-                            <p:commandButton 
-                                value="Edit Admission" 
-                                action="#{admissionController.navigateToEditAdmission}" icon="fa fa-edit"/>
-                            <p:commandButton rendered="#{not admissionController.current.discharged and not admissionController.current.paymentFinalized}" value="Interim Bill" icon="fa fa-file"/>
-                            <p:commandButton value="Estimated Bill" icon="fa fa-calculator"/>
-                            <p:commandButton rendered="#{admissionController.current.discharged}" value="Final Bill" icon="fa fa-file"/>
-                            <p:commandButton value="Add Services" icon="fa fa-plus"/>
-                            <p:commandButton value="Add Medicines" icon="fa fa-plus"/>
-                            <p:commandButton value="Add Items" icon="fa fa-plus"/>
-                            <p:commandButton value="Add Timed Services" icon="fa fa-plus"/>
-                            <p:commandButton value="Add Professional Charges" icon="fa fa-plus"/>
-                            <p:commandButton value="Add Estimated Professional Charges" icon="fa fa-plus"/>
-                        </div>
-                    </div>
+                    <p:panelGrid columns="1" >
+                        <p:commandButton 
+                            value="Edit Admission" 
+                            action="#{admissionController.navigateToEditAdmission}" 
+                            icon="fa fa-edit">
+                            <f:setPropertyActionListener 
+                                value="#{admissionController.current}" 
+                                target="#{bhtEditController.current}" ></f:setPropertyActionListener>
+                        </p:commandButton>
+                        <p:commandButton 
+                            rendered="#{not admissionController.current.discharged and not admissionController.current.paymentFinalized}" 
+                            value="Interim Bill" 
+                            icon="fa fa-file">
+                            <f:setPropertyActionListener 
+                                value="#{admissionController.current}" 
+                                target="#{bhtEditController.current}" ></f:setPropertyActionListener>
+                        </p:commandButton>
+                        <p:commandButton value="Estimated Bill" icon="fa fa-calculator"/>
+                        <p:commandButton rendered="#{admissionController.current.discharged}" value="Final Bill" icon="fa fa-file"/>
+                        <p:commandButton value="Add Services" icon="fa fa-plus"/>
+                        <p:commandButton value="Add Medicines" icon="fa fa-plus"/>
+                        <p:commandButton value="Add Items" icon="fa fa-plus"/>
+                        <p:commandButton value="Add Timed Services" icon="fa fa-plus"/>
+                        <p:commandButton value="Add Professional Charges" icon="fa fa-plus"/>
+                        <p:commandButton value="Add Estimated Professional Charges" icon="fa fa-plus"/>
+                    </p:panelGrid>
                 </div>
             </div>
 
