Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/inward/inward_room_occupancy.xhtml
+++ b/src/main/webapp/inward/inward_room_occupancy.xhtml
@@ -66,11 +66,12 @@
                     </p:column>
                     <p:column rendered="#{webUserController.hasPrivilege('InwardRoomDischarge')}" >
                         <p:selectBooleanCheckbox value="#{pr.discharged}" 
-                                                 itemLabel="Discharge"/>
+                                                 itemLabel="Releazed from Room"/>
                     </p:column>
                     <p:column rendered="#{webUserController.hasPrivilege('InwardRoomDischarge')}" >
                         <p:commandButton ajax="false" value="Update" action="#{roomOccupancyController.update(pr)}"  />
                     </p:column>
+                    
                 </p:dataTable>
 
 
