Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/admin/pricing/membership/membership_scheme.xhtml
+++ b/src/main/webapp/admin/pricing/membership/membership_scheme.xhtml
@@ -70,6 +70,8 @@
                                     <h:inputText autocomplete="off" id="txtName" value="#{membershipSchemeController.current.name}"  style="min-width: 450px"></h:inputText>
                                     <h:outputText id="lblCode" value="Code" ></h:outputText>
                                     <h:inputText autocomplete="off" id="txtCode" value="#{membershipSchemeController.current.code}" style="min-width: 450px" ></h:inputText>
+                                    <h:outputText id="lblins" value="Institution" ></h:outputText>
+                                    <h:inputText autocomplete="off" id="txtCode" value="#{membershipSchemeController.current.institution}" style="min-width: 450px" ></h:inputText>
                                 </h:panelGrid>
 
                             </h:panelGrid>
