--- a/src/main/webapp/admin/lims/investigation_format.xhtml
+++ b/src/main/webapp/admin/lims/investigation_format.xhtml
@@ -267,7 +267,11 @@
                             </p:panel>
 
                             <p:panel  header="Investigation Items List" id="pIx">
-                                <p:selectOneMenu  id="dtbItem" value="#{investigationItemController.current}" style="width: 270px;" >
+                                <p:selectOneMenu 
+                                    id="dtbItem" 
+                                    value="#{investigationItemController.current}" 
+                                    style="width: 270px;" 
+                                    filter="true">
                                     <f:selectItem itemLabel="Select" />
                                     <f:selectItems value="#{investigationItemController.userChangableItems}" var="ii" itemLabel="#{ii.name} - #{ii.ixItemType }" itemValue="#{ii}" />
                                     <p:ajax  event="change" process="dtbItem" update=":#{p:resolveFirstComponentWithId('pDetails',view).clientId} "/>
